--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This is the file that contains the individual that did this project.
-for now it is just me
+# This file lists two individual having contrbute the content to the repository
 
 Oladele Abimbola Elizabeth <elizabetholadele7@gmail.com>
+John Jeremiah Oluwaseyi <newtonjohn011@gmail.com>
